--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
+[env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328new
+board = nanoatmega328
 monitor_speed = 9600
 build_flags = -DF_CPU=16000000UL
